--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <Compile Include="Commands\DeployCommand.cs" />
     <Compile Include="Commands\IVsCommand.cs" />
+    <Compile Include="Commands\RunProjectionCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
     <Compile Include="MyControl.xaml.cs">
       <DependentUpon>MyControl.xaml</DependentUpon>
