--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -14,7 +14,7 @@
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EventStore.EventStore_VS_Tools</RootNamespace>
+    <RootNamespace>EventStore.VS.Tools</RootNamespace>
     <AssemblyName>EventStore.VS.Tools</AssemblyName>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
@@ -40,6 +40,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.VisualStudio.ManagedInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.ManagedInterfaces.9.0, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.OLE.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.8.0" />
@@ -48,6 +50,7 @@
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.11.0">
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.TemplateWizardInterface, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.TextManager.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.11.0" />
     <Reference Include="Microsoft.VisualStudio.Shell.Immutable.10.0" />
@@ -130,15 +133,24 @@
     </Compile>
     <Compile Include="MyToolWindow.cs" />
     <Compile Include="Guids.cs" />
-    <Compile Include="EventStore.VS.ProjectionsProjectFactory.cs" />
+    <Compile Include="ProjectFactory.cs" />
+    <Compile Include="ProjectionFileNode.cs" />
+    <Compile Include="ProjectionFileNodeProperties.cs" />
+    <Compile Include="ProjectionsConfigProvider.cs" />
+    <Compile Include="ProjectionsProjectConfig.cs" />
     <Compile Include="ProjectionsProjectNode.cs" />
+    <Compile Include="ProjectionsProjectNodeProperties.cs" />
+    <Compile Include="ProjectWizard.cs" />
+    <Compile Include="PropertyPages\DeployPropertyPage.cs" />
+    <Compile Include="PropertyPages\GeneralPropertyPage.cs" />
+    <Compile Include="PropertyPages\PropertyPageBase.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="EventStore.VS.ToolsPackage.cs" />
+    <Compile Include="EventStorePackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PkgCmdID.cs" />
   </ItemGroup>
@@ -154,6 +166,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <VSTemplate Include="Templates\Items\Basic\Basic.vstemplate" />
+    <Content Include="Templates\Items\Basic\__TemplateIcon.ico" />
+    <Content Include="Templates\Items\Basic\Projection.js" />
     <Content Include="Templates\Projects\Projections\Projections.ico" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
