--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -127,6 +127,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\DeployCommand.cs" />
     <Compile Include="Commands\IVsCommand.cs" />
     <Compile Include="Commands\RunProjectionCommand.cs" />
@@ -136,6 +137,7 @@
     </Compile>
     <Compile Include="MyToolWindow.cs" />
     <Compile Include="Guids.cs" />
+    <Compile Include="OutputWindows.cs" />
     <Compile Include="ProjectFactory.cs" />
     <Compile Include="ProjectionFileNode.cs" />
     <Compile Include="ProjectionFileNodeProperties.cs" />
