--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -16,7 +16,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EventStore.VS.Tools</RootNamespace>
     <AssemblyName>EventStore.VS.Tools</AssemblyName>
-    <SignAssembly>True</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Reference Include="EventStore.ClientAPI">
       <HintPath>..\packages\EventStore.Client.1.0.1\lib\net40\EventStore.ClientAPI.dll</HintPath>
+      <IlMerge>True</IlMerge>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.ManagedInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -132,6 +133,7 @@
     <Compile Include="Commands\IVsCommand.cs" />
     <Compile Include="Commands\RunProjectionCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
+    <Compile Include="EventStoreServices\EventStoreConnectionFactory.cs" />
     <Compile Include="MyControl.xaml.cs">
       <DependentUpon>MyControl.xaml</DependentUpon>
     </Compile>
@@ -203,14 +205,13 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="InitProject\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <UseCodebase>true</UseCodebase>
     <ProjectBasePath>..\MPFProj\</ProjectBasePath>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\Build\Ilmerge.CSharp.targets" />
+  <!--<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />-->
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(ProjectBasePath)\ProjectBase.Files" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
