--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -40,8 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EventStore.ClientAPI">
-      <HintPath>..\packages\EventStore.Client.1.0.1\lib\net40\EventStore.ClientAPI.dll</HintPath>
-      <IlMerge>True</IlMerge>
+      <HintPath>..\packages\EventStore.Client.1.1.0-rc1\lib\net40\EventStore.ClientAPI.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.ManagedInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -59,6 +58,9 @@
     <Reference Include="Microsoft.VisualStudio.Shell.11.0" />
     <Reference Include="Microsoft.VisualStudio.Shell.Immutable.10.0" />
     <Reference Include="Microsoft.VisualStudio.Shell.Immutable.11.0" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -134,6 +136,10 @@
     <Compile Include="Commands\RunProjectionCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
     <Compile Include="EventStoreServices\EventStoreConnectionFactory.cs" />
+    <Compile Include="EventStoreServices\EventStoreLogger.cs" />
+    <Compile Include="EventStoreServices\HttpExtensions.cs" />
+    <Compile Include="EventStoreServices\ProjectionsManagerLight.cs" />
+    <Compile Include="EventStoreServices\SimpleHttpClient.cs" />
     <Compile Include="MyControl.xaml.cs">
       <DependentUpon>MyControl.xaml</DependentUpon>
     </Compile>
@@ -210,8 +216,8 @@
     <UseCodebase>true</UseCodebase>
     <ProjectBasePath>..\MPFProj\</ProjectBasePath>
   </PropertyGroup>
-  <Import Project="$(SolutionDir)\Build\Ilmerge.CSharp.targets" />
-  <!--<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />-->
+  <!--<Import Project="$(SolutionDir)\Build\Ilmerge.CSharp.targets" />-->
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(ProjectBasePath)\ProjectBase.Files" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
