--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -134,16 +134,15 @@
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\DeployCommand.cs" />
     <Compile Include="Commands\IVsCommand.cs" />
-    <Compile Include="Commands\RunProjectionCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
     <Compile Include="EventStoreServices\EventStoreConnectionFactory.cs" />
-    <Compile Include="EventStoreServices\EventStoreLogger.cs" />
-    <Compile Include="EventStoreServices\HttpExtensions.cs" />
+    <Compile Include="Infrastructure\HttpExtensions.cs" />
     <Compile Include="EventStoreServices\ProjectionsManagerLight.cs" />
-    <Compile Include="EventStoreServices\SimpleHttpClient.cs" />
-    <Compile Include="MyControl.xaml.cs">
-      <DependentUpon>MyControl.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="Infrastructure\HttpClient.cs" />
+    <Compile Include="EventStore\ProjectionDeploymentAgent.cs" />
+    <Compile Include="Infrastructure\IConsume.cs" />
+    <Compile Include="Infrastructure\Messages.cs" />
+    <Compile Include="EventStore\Messages.cs" />
     <Compile Include="MyToolWindow.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="OutputWindows.cs" />
@@ -205,12 +204,6 @@
     <Content Include="Resources\Package.ico" />
     <Content Include="Templates\Projects\Projections\Projection.js" />
     <VSTemplate Include="Templates\Projects\Projections\Projections.vstemplate" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="MyControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
