--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -63,6 +63,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="PresentationCore" />
@@ -136,7 +138,7 @@
     <Compile Include="EventStore\EventStoreConnectionException.cs" />
     <Compile Include="Infrastructure\DowncastingConsumer.cs" />
     <Compile Include="Infrastructure\HttpExtensions.cs" />
-    <Compile Include="Infrastructure\HttpClient.cs" />
+    <Compile Include="Infrastructure\SimpleHttpClient.cs" />
     <Compile Include="EventStore\ProjectionDeploymentAgent.cs" />
     <Compile Include="Infrastructure\IConsume.cs" />
     <Compile Include="Infrastructure\IPublish.cs" />
