--- a/EventStore.Vs.Tools.Tests/EventStore.Vs.Tools.Tests.csproj
+++ b/EventStore.Vs.Tools.Tests/EventStore.Vs.Tools.Tests.csproj
@@ -48,6 +48,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +59,7 @@
   <ItemGroup>
     <Compile Include="EventStore\EndPointTest.cs" />
     <Compile Include="EventStore\ProjectionDeploymentAgentTest.cs" />
+    <Compile Include="EventStore\ProjectionDeploymentTest.cs" />
     <Compile Include="FakeHttpClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
