--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -134,10 +134,15 @@
     <Compile Include="Commands\IVsCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="EventStore\DeploymentProcessOutputConsumer.cs" />
     <Compile Include="EventStore\EventStoreAddress.cs" />
     <Compile Include="EventStore\EventStoreConnectionException.cs" />
+    <Compile Include="Infrastructure\AsyncHelper.cs" />
     <Compile Include="Infrastructure\DowncastingConsumer.cs" />
+    <Compile Include="Infrastructure\Hash.cs" />
     <Compile Include="Infrastructure\HttpExtensions.cs" />
+    <Compile Include="Infrastructure\IOutputMessages.cs" />
+    <Compile Include="Infrastructure\OutputMessageWriter.cs" />
     <Compile Include="Infrastructure\SimpleHttpClient.cs" />
     <Compile Include="EventStore\ProjectionDeploymentAgent.cs" />
     <Compile Include="Infrastructure\IConsume.cs" />
@@ -145,7 +150,7 @@
     <Compile Include="Infrastructure\IMessage.cs" />
     <Compile Include="EventStore\Messages.cs" />
     <Compile Include="Infrastructure\Multiplexer.cs" />
-    <Compile Include="Infrastructure\TypeBaseDispatcher.cs" />
+    <Compile Include="Infrastructure\TopicBaseDispatcher.cs" />
     <Compile Include="MyToolWindow.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="OutputWindows.cs" />
