--- a/EventStore.Vs.Tools.Tests/EventStore.Vs.Tools.Tests.csproj
+++ b/EventStore.Vs.Tools.Tests/EventStore.Vs.Tools.Tests.csproj
@@ -58,9 +58,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventStore\EndPointTest.cs" />
+    <Compile Include="EventStore\MessageTopicsTest.cs" />
+    <Compile Include="EventStore\OutputConsumerTest.cs" />
     <Compile Include="EventStore\ProjectionDeploymentAgentTest.cs" />
     <Compile Include="EventStore\ProjectionDeploymentTest.cs" />
     <Compile Include="FakeHttpClient.cs" />
+    <Compile Include="FakeOutput.cs" />
+    <Compile Include="FakePublisher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
