--- a/EventStore.VS.Tools/EventStore.VS.Tools.csproj
+++ b/EventStore.VS.Tools/EventStore.VS.Tools.csproj
@@ -132,17 +132,20 @@
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\DeployCommand.cs" />
     <Compile Include="Commands\IVsCommand.cs" />
+    <Compile Include="Commands\RunCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="EventStore\DeploymentProcessOutputConsumer.cs" />
     <Compile Include="EventStore\EventStoreAddress.cs" />
     <Compile Include="EventStore\EventStoreConnectionException.cs" />
+    <Compile Include="EventStore\ProjectionRunner.cs" />
     <Compile Include="Infrastructure\AsyncHelper.cs" />
     <Compile Include="Infrastructure\DowncastingConsumer.cs" />
     <Compile Include="Infrastructure\Hash.cs" />
     <Compile Include="Infrastructure\HttpExtensions.cs" />
     <Compile Include="Infrastructure\IOutputMessages.cs" />
     <Compile Include="Infrastructure\OutputMessageWriter.cs" />
+    <Compile Include="Infrastructure\PrintToOutputConsumer.cs" />
     <Compile Include="Infrastructure\SimpleHttpClient.cs" />
     <Compile Include="EventStore\ProjectionDeploymentAgent.cs" />
     <Compile Include="Infrastructure\IConsume.cs" />
