Setting Parameters here and there

--- a/EventStore.VSTools/EventStore.VSTools.csproj
+++ b/EventStore.VSTools/EventStore.VSTools.csproj
@@ -5,6 +5,9 @@
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">11.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Package.ico</ApplicationIcon>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -197,6 +200,10 @@
   </ItemGroup>
   <ItemGroup>
     <VSTemplate Include="Templates\Items\Basic\Basic.vstemplate" />
+    <Content Include="Resources\Package.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Templates\Items\Basic\__TemplateIcon.ico" />
     <Content Include="Templates\Items\Basic\Projection.js" />
     <Content Include="Templates\Projects\Projections\Projections.ico" />
@@ -218,7 +225,6 @@
     <None Include="Resources\Images.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Package.ico" />
     <Content Include="Templates\Projects\Projections\Projection.js" />
     <VSTemplate Include="Templates\Projects\Projections\Projections.vstemplate" />
   </ItemGroup>
