--- a/EventStore.VSTools/EventStore.VSTools.csproj
+++ b/EventStore.VSTools/EventStore.VSTools.csproj
@@ -205,6 +205,7 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="Resources\script_16xLG.png" />
+    <None Include="Resources\projectNodeIcon.ico" />
     <Content Include="Templates\Items\Basic\__TemplateIcon.ico">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
