--- a/EventStore.VSTools/EventStore.VSTools.csproj
+++ b/EventStore.VSTools/EventStore.VSTools.csproj
@@ -4,6 +4,8 @@
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">11.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\Package.ico</ApplicationIcon>
@@ -200,19 +202,19 @@
   </ItemGroup>
   <ItemGroup>
     <VSTemplate Include="Templates\Items\Basic\Basic.vstemplate" />
+    <Content Include="Resources\license.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\Package.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="Resources\script_16xLG.png" />
     <None Include="Resources\projectNodeIcon.ico" />
-    <Content Include="Templates\Items\Basic\__TemplateIcon.ico">
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+    <Content Include="Templates\Items\Basic\__TemplateIcon.ico" />
     <Content Include="Templates\Items\Basic\Projection.js" />
-    <Content Include="Templates\Projects\Projections\Projections.ico">
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
+    <Content Include="Templates\Projects\Projections\Projections.ico" />
     <None Include="packages.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
@@ -245,10 +247,23 @@
     <UseCodebase>true</UseCodebase>
     <ProjectBasePath>..\MPFProj\</ProjectBasePath>
   </PropertyGroup>
-  <!--<Import Project="$(SolutionDir)\Build\Ilmerge.CSharp.targets" />-->
+  <PropertyGroup>
+    <GetVsixSourceItemsDependsOn>$(GetVsixSourceItemsDependsOn);GetVsixTemplateItems</GetVsixSourceItemsDependsOn>
+  </PropertyGroup>
+  <Target Name="GetVsixTemplateItems" DependsOnTargets="ZipProjects;ZipItems">
+    <ItemGroup>
+      <VSIXSourceItem Include="@(IntermediateZipItem)">
+        <VSIXSubPath>ItemTemplates\%(IntermediateZipItem.Language)\%(IntermediateZipItem.OutputSubPath)\%(IntermediateZipItem.Culture)</VSIXSubPath>
+      </VSIXSourceItem>
+      <VSIXSourceItem Include="@(IntermediateZipProject)">
+        <VSIXSubPath>ProjectTemplates\%(IntermediateZipProject.Language)\%(IntermediateZipProject.OutputSubPath)\%(IntermediateZipProject.Culture)</VSIXSubPath>
+      </VSIXSourceItem>
+    </ItemGroup>
+  </Target>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(ProjectBasePath)\ProjectBase.Files" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
