--- a/src/EventStore.VSTools/EventStore.VSTools.csproj
+++ b/src/EventStore.VSTools/EventStore.VSTools.csproj
@@ -21,7 +21,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EventStore.VSTools</RootNamespace>
     <AssemblyName>EventStore.VSTools</AssemblyName>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
@@ -140,6 +140,15 @@
     <Compile Include="Commands\RunCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="Views\CreateProject\CreateProjectViewModel.cs" />
+    <Compile Include="CreateProjectWizard.cs" />
+    <Compile Include="Views\CreateProject\CreateProjectWizardView.xaml.cs">
+      <DependentUpon>CreateProjectWizardView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreateProject\EventStoreConnectionPageViewModel.cs" />
+    <Compile Include="Views\CreateProject\ImportProjectionsPageViewModel.cs" />
+    <Compile Include="Views\CreateProject\PageViewModel.cs" />
     <Compile Include="EventStore\DeploymentProcessOutputConsumer.cs" />
     <Compile Include="EventStore\EventStoreAddress.cs" />
     <Compile Include="EventStore\EventStoreConnectionException.cs" />
@@ -169,7 +178,6 @@
     <Compile Include="ProjectionsProjectConfig.cs" />
     <Compile Include="ProjectionsProjectNode.cs" />
     <Compile Include="ProjectionsProjectNodeProperties.cs" />
-    <Compile Include="ProjectWizard.cs" />
     <Compile Include="PropertyPages\DeployPropertyPage.cs" />
     <Compile Include="PropertyPages\GeneralPropertyPage.cs" />
     <Compile Include="PropertyPages\PropertyPageBase.cs" />
@@ -182,9 +190,11 @@
     <Compile Include="EventStorePackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PkgCmdID.cs" />
-    <Compile Include="Views\QueryToolWindowViewModel.cs" />
-    <Compile Include="Views\QueryViewModel.cs" />
-    <Compile Include="Views\QueryViewToolWindow.xaml.cs">
+    <Compile Include="Views\CreateProject\StartPageViewModel.cs" />
+    <Compile Include="Views\CreateProject\WizardState.cs" />
+    <Compile Include="Views\QueryTool\QueryToolWindowViewModel.cs" />
+    <Compile Include="Views\QueryTool\QueryViewModel.cs" />
+    <Compile Include="Views\QueryTool\QueryViewToolWindow.xaml.cs">
       <DependentUpon>QueryViewToolWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\DelegateCommand.cs" />
@@ -198,18 +208,26 @@
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <VSTemplate Include="Templates\Items\Basic\Basic.vstemplate" />
+    <Resource Include="Resources\Icons\128x128.png" />
+    <Resource Include="Resources\Icons\16x16.png" />
+    <Resource Include="Resources\Icons\24x24.png" />
+    <Resource Include="Resources\Icons\256x256.png" />
+    <Resource Include="Resources\Icons\32x32.png" />
+    <Resource Include="Resources\Icons\48x48.png" />
+    <Resource Include="Resources\Icons\64x64.png" />
+    <Resource Include="Resources\Icons\96x96.png" />
     <Content Include="Resources\license.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Resources\Package.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <None Include="Key.snk" />
     <None Include="Resources\script_16xLG.png" />
     <None Include="Resources\projectNodeIcon.ico" />
     <Content Include="Templates\Items\Basic\__TemplateIcon.ico" />
@@ -222,11 +240,9 @@
     <Content Include="Templates\Projects\Projections\Projections.espproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Key.snk" />
-  </ItemGroup>
-  <ItemGroup>
     <VSCTCompile Include="EventStore.VSTools.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
+      <SubType>Designer</SubType>
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
@@ -234,11 +250,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Templates\Projects\Projections\Projection.js" />
-    <VSTemplate Include="Templates\Projects\Projections\Projections.vstemplate" />
+    <VSTemplate Include="Templates\Projects\Projections\Projections.vstemplate">
+      <SubType>Designer</SubType>
+    </VSTemplate>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Page Include="Views\QueryViewToolWindow.xaml">
+    <Page Include="Views\CreateProject\CreateProjectWizardView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\QueryTool\QueryViewToolWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ThemedControls.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
