--- a/src/EventStore.VSTools/EventStore.VSTools.csproj
+++ b/src/EventStore.VSTools/EventStore.VSTools.csproj
@@ -139,8 +139,14 @@
     <Compile Include="Commands\IVsCommand.cs" />
     <Compile Include="Commands\RunCommand.cs" />
     <Compile Include="Commands\ToolWindowCommand.cs" />
+    <Compile Include="EventStore\ErrorMessages.cs" />
     <Compile Include="EventStore\ProjectionConfig.cs" />
     <Compile Include="EventStore\ProjectionStatistics.cs" />
+    <Compile Include="ExceptionExtensions.cs" />
+    <Compile Include="Infrastructure\ErrorMessageConsumer.cs" />
+    <Compile Include="Infrastructure\IOutputErrorMessages.cs" />
+    <Compile Include="Infrastructure\ErrorMessageWriter.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Views\Constants.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="EventStore\ProjectionsManager.cs" />
