--- a/src/EventStore.VSTools.Tests/EventStore.VSTools.Tests.csproj
+++ b/src/EventStore.VSTools.Tests/EventStore.VSTools.Tests.csproj
@@ -65,6 +65,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Credentials\CredentialEncryptorTests.cs" />
+    <Compile Include="Credentials\CredentialsSerializerTests.cs" />
+    <Compile Include="Credentials\RegistryStoreTests.cs" />
     <Compile Include="EventStore\EndPointTest.cs" />
     <Compile Include="EventStore\MessageTopicsTest.cs" />
     <Compile Include="EventStore\OutputConsumerTest.cs" />
@@ -84,6 +87,7 @@
       <Name>EventStore.VSTools</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
