Asking for credentials

--- a/src/EventStore.VSTools.Tests/EventStore.VSTools.Tests.csproj
+++ b/src/EventStore.VSTools.Tests/EventStore.VSTools.Tests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="EventStore\OutputConsumerTest.cs" />
     <Compile Include="EventStore\ProjectionDeploymentTest.cs" />
     <Compile Include="EventStore\ProjectionManagerTests.cs" />
+    <Compile Include="FakeCredentialsService.cs" />
     <Compile Include="FakeHttpClient.cs" />
     <Compile Include="FakeOutput.cs" />
     <Compile Include="FakePublisher.cs" />
